# kudu

./: .cvsversion  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
CVS/: Entries
examples/: Makefile.am  Makefile.in  claw.kudu  claw.rwx  figure.kudu  figure.rwx
examples/CVS/: Entries  Repository
images/: Makefile.am  Makefile.in
images/CVS/: Entries  Repository  Root
m4/: python.m4
m4/CVS/: Entries  Repository
scripts/: Axle-Spinner.py  Makefile.am  Makefile.in  Sugar Melt.py
scripts/CVS/: Entries  Repository
src/: Makefile.am  Makefile.in  about.c  about.h  bones.c  bones.h  bones_edit.c  bones_edit.h  camera.c  camera.h  config.h.in  defaultfont.h  font.c  font.h  frames.c  frames.h  globals.h  graphics.c  graphics.h  gui.c  gui.h  gui_bone.c  gui_bone.h  gui_materials.c  gui_materials.h  gui_object.c  gui_object.h  gui_options.c  gui_options.h  gui_scripts.c  gui_scripts.h  gui_vertex.c  gui_vertex.h  guimodule.c  guimodule.h  image.c  image.h  joints.c  joints.h  joints_edit.c  (+51 more)
src/CVS/: Entries  Repository
